cli/tests/snapshot/inputs/errors/destructuring_repeated_ident_typed.ncl
# capture = 'stderr'
# command = ['eval']
(
  let { a, a, .. } = { a = 1, b = 2 } in
  a : Number
): _
